# knock_lock

./: .gitignore
embedded/: .ycm_extra_conf.py  CMakeLists.txt
embedded/cmake/: build_configuration.cmake  compilation_flags.cmake  sources.cmake  toolchain_setup.cmake
embedded/knock_lock.X/: default.mc3  default.mc3.bak  main.c
embedded/knock_lock.X/mcc_generated_files/: exceptions.c  exceptions.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  pin_manager.c  pin_manager.h
embedded/knock_lock.X/mcc_generated_files/usb/: usb_descriptors.c  usb_device_config.h
embedded/knock_lock.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
embedded/scripts/: build_image.sh  clean_all.sh  upload_image.mdb  upload_image.sh
embedded/src/: CMakeLists.txt  main.c
embedded/src/bsp/: device_configuration.c  xc.h
embedded/src/bsp/inc/: interrupts.h  syskey.h  xc.h
embedded/src/bsp/inc/stubs/: builtin_stub.h  sfr_stub.h
embedded/src/bsp/stubs/: xc_stub.h
embedded/src/inc/: definitions.h
embedded/src/oscillator/: oscillator.c  oscillator.h
embedded/src/oscillator/hal/: oscillator_hal.c  oscillator_hal.h  oscillator_hal.h.in  oscillator_hal_32MM0256GPM064.c  oscillator_hal_32MM0256GPM064.h
